refactor(US07-13): Dependencias corretas para o funcionamento das rotas no gateway